tests/regression/errors/basic/type_error_22.csd
// Type error test 22
sus number drip = 22
sus text tea = "string_22"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 22:", wrong)
